objects/GEMS_BA_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>BA_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement__c</fullName>
        <label>Benefit Agreement</label>
        <referenceTo>GEMS_Benefit_Agreement__c</referenceTo>
        <relationshipLabel>GEMS GroupSection BA Associations</relationshipLabel>
        <relationshipName>BA_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Group Section - BA Associations</relationshipLabel>
        <relationshipName>BA_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Section__c</fullName>
        <label>Group Section</label>
        <referenceTo>GEMS_Group_Section__c</referenceTo>
        <relationshipName>GS_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsNew</label>
        <type>Checkbox</type>
    </fields>
    <label>GEMS GroupSection BA Association</label>
    <nameField>
        <label>Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEMS GroupSection BA Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>